# globcopy

./: .gitignore  Makefile  README.rst  bld.bat  buildout.cfg  meta.yaml  requirements.txt  setup.cfg
globcopy/: __init__.py
