[metadata]
name = globcopy
author = Contact Software
author-email = oss@contact.de
summary = A tiny tool to copy subtrees from a to b
description-file = README.rst
home-page = https://github.com/cslab/globcopy
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
[entry_points]
console_scripts =
    globcopy = globcopy:main
